# zeus

./: .babelrc  .dockerignore  .editorconfig  .env.example  .envrc  .eslintignore  .eslintrc  .freight.yaml  .gitignore  .pre-commit-config.yaml  .prettierrc  .python-version  .snyk  .travis.yml  Dockerfile  LICENSE  Makefile  Pipfile  README.md  babel.config.js  bors.toml  celerybeat-schedule  cloudbuild.yaml  conftest.py  docker-compose.yml  foo  package.json  pyproject.toml  requirements-base.txt  requirements-dev.txt  requirements-test.txt  setup.cfg  setup.py  webpack.config.js
.github/workflows/: pythonpackage.yml
cli/: index.js  package.json
config/: env.js  paths.js  webpack.config.dev.js  webpack.config.js  webpack.config.prod.js
config/jest/: async.js  date.js  testStubs.js
kubernetes/zeus/: .gitignore  Chart.yaml  README.md  config  connect-to-postgres  deploy  generate-rabbitmq-manifest  rabbitmq-1_manifest.yaml  requirements.yaml  values.yaml
public/: manifest.json
scripts/: build.js  start.js  test.js
templates/: index.html
templates/debug/: email.html
templates/emails/: base.html  build-notification.html  build-notification.txt  deactivated-repository.html  deactivated-repository.txt
templates/notifications/: email.html  email.txt
tests/fixtures/: sample-checkstyle.xml  sample-clover.xml  sample-coverage.xml  sample-gotest.json  sample-pep8.txt  sample-pylint.txt  sample-xunit-with-artifacts.xml  sample-xunit.xml  travis-build-commit.json  travis-build-pull-request.json  webpack-stats-children.json
tests/zeus/: test_failure.py
webapp/: api.js  api.jsx  errors.jsx  index.css  index.js  index.jsx  registerServiceWorker.js  registerServiceWorker.jsx  rootReducer.js  routes.js  routes.jsx  store.js  store.jsx  types.jsx
webapp/actions/: auth.js  auth.jsx  builds.js  builds.jsx  changeRequests.jsx  debugToolbar.jsx  indicators.js  indicators.jsx  repos.js  repos.jsx  revisions.jsx  stream.jsx  types.js  types.jsx
webapp/assets/: IconCircleCheck.js  IconCircleCheck.jsx  IconCircleCross.jsx  IconClock.js  IconClock.jsx  Logo.js  Logo.jsx
webapp/components/: AggregateFailureList.jsx  AggregateTestList.jsx  App.css  App.js  ArtifactsList.jsx  AsyncComponent.js  AsyncComponent.jsx  AsyncPage.js  AsyncPage.jsx  Badge.jsx  Breadcrumbs.js  Breadcrumbs.jsx  BuildAuthor.js  BuildAuthor.jsx  BuildCoverage.js  BuildCoverage.jsx  BuildDetails.js  BuildDetailsBase.jsx  BuildDuration.js  BuildJobList.js  BuildLink.jsx  BuildList.js  BuildList.jsx  BuildListItem.js  BuildListItem.jsx  BuildOverviewBase.jsx  BuildTestList.js  BundleList.jsx  Button.js  Button.jsx  ChangeRequestList.jsx  ChangeRequestListItem.jsx  Collapsable.jsx  Container.jsx  Content.js  Content.jsx  CoverageSummary.js  CoverageSummary.jsx  Dashboard.js  DebugToolbar.jsx  (+93 more)
webapp/decorators/: stream.jsx
webapp/middleware/: sentry.jsx  stream.jsx
webapp/pages/: AccountSettings.jsx  AddProject.js  AddRepository.js  App.css  App.js  App.jsx  BuildArtifacts.jsx  BuildCoverage.js  BuildCoverage.jsx  BuildDetails.js  BuildDetails.jsx  BuildDiff.js  BuildDiff.jsx  BuildJobList.js  BuildOverview.js  BuildOverview.jsx  BuildSnapshots.jsx  BuildStyleViolationList.jsx  BuildTestList.js  BuildTestList.jsx  Dashboard.js  Dashboard.jsx  DashboardOrWelcome.jsx  GitHubRepositoryList.js  GitHubRepositoryList.jsx  GithubRepositoryList.js  Install.jsx  Login.js  Login.jsx  NotFound.js  OrganizationDetails.js  OwnerDetails.jsx  ProjectBuildList.js  ProjectDetails.js  RepositoryBuildList.js  RepositoryBuildList.jsx  RepositoryChangeRequestList.jsx  RepositoryDetails.js  RepositoryDetails.jsx  RepositoryFileCoverage.jsx  (+28 more)
webapp/reducers/: auth.js  auth.jsx  builds.jsx  changeRequests.jsx  debugToolbar.jsx  index.js  index.jsx  indicators.jsx  repos.js  repos.jsx  revisions.jsx  stream.jsx
webapp/utils/: duration.jsx  fileSize.jsx  (+3 more)
zeus/: __init__.py  app.py  auth.py  config.py  constants.py  exceptions.py
(+585 files in other folders)
