[tool.poetry]
name = "zeus"
version = "0.1.0"
description = ""
readme = "README.md"
repository = "https://github.com/getsentry/zeus"
authors = ["David Cramer <dcramer@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "~3.8"
aiodns = "~1.1.1"
aiohttp = "~3.6.2"
aioredis = "~1.1.0"
asyncpg = "^0.20.0"
blinker = "~1.4"
cached-property = "~1.3.0"
cchardet = "~2.1.1"
celery = "~4.1.1"
celery-redbeat = "^0.13.0"
cryptography = "~2.2.1"
cssselect = "~1.0.1"
cssutils = "~1.0.2"
factory_boy = "~2.12.0"
flask = "~1"
flask-alembic = "~2.0.1"
flask-mail = "~0.9.1"
flask-sqlalchemy = "~2.4"
google-cloud-storage = "^1.23"
honcho = "~1.0.1"
ipython = "^7"
itsdangerous = "~0.24"
jsonschema = "~3.2.0"
lru-dict = "^1.1.6"
lxml = "~4.2.3"
marshmallow = "~3"
nplusone = "~0.8.1"
psycopg2-binary = "~2.8.4"
python-dateutil = "~2.6.1"
redis = "~3.2.0"
sentry-sdk = { version = "~0.14.1" }
SQLAlchemy = "~1.2.0"
toronado = "~0.0.11"
unidecode = "~0.04.21"
uwsgi = "~2.0.15"
werkzeug = "~0.14.1"
yarl = "~1.2.6"
requests = { version = "^2.22", extras = [ "security" ] }
requests-oauthlib = "~0.8.0"
pytest = { version = "~5.3.5", optional = true }
pytest-aiohttp = { version = "~0.3.0", optional = true }
pytest-cov = { version = "~2.8.1", optional = true }
pytest-mock = { version = "~2.0.0", optional = true }
pytest-responses = { version = "~0.4.0", optional = true }
pytest-xdist = { version = "~1.31.0", optional = true }
responses = { version = "~0.10.9", optional = true }
watchdog = "^0.9.0"

[tool.poetry.dev-dependencies]
black = "=18.6b4"
flake8 = "=3.5.0"
pycodestyle = "=2.3.1"

[tool.poetry.extras]
test = [
    "pytest",
    "pytest-aiohttp",
    "pytest-cov",
    "pytest-mock",
    "pytest-responses",
    "pytest-xdist",
    "responses",
]

[tool.poetry.scripts]
zeus = 'zeus.cli:main'

[build-system]
requires = ["poetry>=1.0.0", "pip==19.3.1"]
build-backend = "poetry.masonry.api"
